[package]
name = "spotdj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
librespot = { git = "https://github.com/spotlightishere/librespot.git", branch = "dev"}
# librespot = { path = "../librespot" }
poise = "0.5"
tokio = { version = "1.33", features = [ "full" ]}
