[package]
name = "spotdj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = { git = "https://github.com/spotlightishere/librespot.git", branch = "dev"}
poise = "0.6"
tokio = { version = "1.37", features = [ "full" ]}
